--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@marsidev/react-turnstile": "^1.4.2",
     "@supabase/supabase-js": "^2.93.3",
+    "konva": "^10.2.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.2.3",
-    "react-sketch-canvas": "^6.2.0"
+    "react-konva": "^19.2.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
