--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "19.2.3",
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.3",
-    "react-konva": "^19.2.2"
+    "react-konva": "^19.2.2",
+    "vercel": "^50.17.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
